WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186105
Fix the ENABLE(DATALIST_ELEMENT) build
https://bugs.webkit.org/show_bug.cgi?id=186105
Summary
Fix the ENABLE(DATALIST_ELEMENT) build
Aditya Keerthi
Reported
2018-05-30 11:33:31 PDT
If the DATALIST_ELEMENT flag is active, WebCore, WebKit and WebKitLegacy all fail to build.
Attachments
Patch
(7.47 KB, patch)
2018-05-30 11:57 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Patch
(7.37 KB, patch)
2018-05-30 12:26 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2018-05-30 11:57:34 PDT
Created
attachment 341589
[details]
Patch
Wenson Hsieh
Comment 2
2018-05-30 12:18:17 PDT
Comment on
attachment 341589
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341589&action=review
> Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:52 > +#include <WebCore/HTMLDataListElement.h>
Super minor nit — we generally prefer to put conditional header includes like this after the last unconditional header include (in this case, after `#include <wtf/UUID.h>`).
Aditya Keerthi
Comment 3
2018-05-30 12:26:31 PDT
Created
attachment 341593
[details]
Patch
WebKit Commit Bot
Comment 4
2018-05-30 13:35:17 PDT
Comment on
attachment 341593
[details]
Patch Clearing flags on attachment: 341593 Committed
r232306
: <
https://trac.webkit.org/changeset/232306
>
WebKit Commit Bot
Comment 5
2018-05-30 13:35:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-05-30 13:36:49 PDT
<
rdar://problem/40661409
>
Darin Adler
Comment 7
2018-05-30 21:13:15 PDT
Comment on
attachment 341593
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341593&action=review
> Source/WebCore/rendering/RenderTheme.cpp:-1003 > - auto* dataList = downcast<HTMLDataListElement>(input.list());
I don’t understand the rationale for the changes in this file. None of them seem to be needed.
Aditya Keerthi
Comment 8
2018-05-31 09:24:15 PDT
(In reply to Darin Adler from
comment #7
)
> Comment on
attachment 341593
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=341593&action=review
> > > Source/WebCore/rendering/RenderTheme.cpp:-1003 > > - auto* dataList = downcast<HTMLDataListElement>(input.list()); > > I don’t understand the rationale for the changes in this file. None of them > seem to be needed.
When attempting to build before the changes, I was met with a "No matching function for call to 'downcast'". I now realize that I could have changed that specific line to use input.list().get() and kept the rest the same. Is there a way that you prefer?
Darin Adler
Comment 9
2018-05-31 22:42:33 PDT
(In reply to Aditya Keerthi from
comment #8
)
> When attempting to build before the changes, I was met with a "No matching > function for call to 'downcast'".
OK, no strong preference either way.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug