Fix the ENABLE(DATALIST_ELEMENT) build https://bugs.webkit.org/show_bug.cgi?id=186105

Patch by Aditya Keerthi <akeerthi@apple.com> on 2018-05-30
Reviewed by Wenson Hsieh.

Source/WebCore:

* WebCore.xcodeproj/project.pbxproj:
* html/ColorInputType.cpp:
(WebCore::ColorInputType::suggestions const):
* html/HTMLInputElement.h:
* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::ownerDataListElement const):
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintSliderTicks):

Source/WebKit:

* WebProcess/Automation/WebAutomationSessionProxy.cpp:

Canonical link: https://commits.webkit.org/201529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232306 268f45cc-cd09-0410-ab3c-d52691b4dbfc