Source/WebCore/html/ColorInputType.cpp
@@ -253,7 +253,7 @@ Vector<Color> ColorInputType::suggestions() const
         suggestions.reserveInitialCapacity(length);
         for (unsigned i = 0; i != length; ++i) {
             auto value = downcast<HTMLOptionElement>(*options->item(i)).value();
-            if (isValidSimpleColorString(value))
+            if (isValidSimpleColor(value))
                 suggestions.uncheckedAppend(Color(value));
         }
     }
